--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,7 @@
+@import "./reset";
+@import "./github-markdown.css";
+@import "./atom-one-dark.min.css";
+
 html,body,#app{
   height: 100%;
   width: 100%;
@@ -7,4 +11,91 @@ html,body,#app{
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ivu-card-head p, .ivu-card-head-inner{
+  height: 24px;
+  line-height: 24px;
+}
+
+.ivu-card-head p::after, .ivu-card-head-inner::after{
+  clear:both;
+  content:'';
+  display:block;
+  width:0;
+  height:0;
+  visibility:hidden;
+}
+
+.ivu-card-head p > .ivu-btn-small, .ivu-card-head-inner > .ivu-btn-small{
+  float: right;
+}
+
+.box-flex {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    .box-flex-list {
+        flex: 1;
+        flex-grow: 1;
+        overflow: hidden;
+        .ivu-card {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            .ivu-card-body {
+                flex: 1;
+                flex-grow: 1;
+                overflow: hidden;
+                .ivu-table-wrapper {
+                    height: calc(100% - 40px);
+                    margin-bottom: 15px;
+                    .ivu-table {
+                        .ivu-table-fixed {
+                            height: inherit;
+                        }
+                        .ivu-table-body {
+                            height: calc(100% - 40px);
+                        }
+                        .ivu-table-fixed-body {
+                            height: calc(100% - 40px - 20px);
+                        }
+                        .poptip-button-box {
+                            .ivu-poptip {
+                                margin-left: 5px;
+                            }
+                            .ivu-poptip:first-child {
+                                margin-left: 0;
+                            }
+                        }
+                    }
+                    .ivu-table-small {
+                        .ivu-table-fixed {
+                            height: inherit;
+                        }
+                        .ivu-table-body {
+                            height: calc(100% - 32px);
+                        }
+                        .ivu-table-fixed-body {
+                            height: calc(100% - 32px - 20px);
+                        }
+                    }
+                    .ivu-table-large {
+                        .ivu-table-fixed {
+                            height: inherit;
+                        }
+                        .ivu-table-body {
+                            height: calc(100% - 48px);
+                        }
+                        .ivu-table-fixed-body {
+                            height: calc(100% - 48px - 20px);
+                        }
+                    }
+                }
+                .ivu-page {
+                    text-align: right;
+                }
+            }
+        }
+    }
 }
