--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -234,15 +234,6 @@ div::-webkit-scrollbar-track {
     background: #EDEDED;
 }
 
-.vertical-center-modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .ivu-modal {
-        top: 0;
-    }
-}
-
 .box-flex {
     display: flex;
     flex-direction: column;
@@ -310,4 +301,206 @@ div::-webkit-scrollbar-track {
             }
         }
     }
+}
+
+
+.vertical-center-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .ivu-modal {
+        top: 0;
+    }
+}
+.writing-box{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .writing-title{
+    flex-basis: 40px;
+    border-bottom: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    padding: 3px 10px;
+  }
+  .writing-content{
+    flex-grow: 1;
+    height: 100%;
+    overflow-y: auto;
+    display:  flex;
+    .api-list{
+      flex-basis: 200px;
+      border-right: 1px solid #ddd;
+      .api-list-nav{
+        font-size: 14px;
+        color: #333333;
+        font-weight: 200;
+        zoom: 1;
+        border-bottom: 1px solid #ddd;
+        .nav-item{
+          font-size: 14px;
+          padding: 0 9px;
+          cursor: pointer;
+          float: left;
+          height: 30px;
+          line-height: 30px;
+          color: #666;
+        }
+        .nav-item.active{
+          border-bottom: 1px solid #fafafa;
+          margin-bottom: -1px;
+          border-left: 1px solid #ddd;
+          border-right: 1px solid #ddd;
+          padding-left: 8px;
+          padding-right: 8px;
+        }
+        .plus-right{
+          float: right;
+          color: #999;
+          cursor: pointer;
+          height: 24px;
+          width: 24px;
+          line-height: 24px;
+          display: inline-block;
+          margin-top: 4px;
+        }
+      }
+      .api-list-nav:after{
+        display: block;
+        content: '';
+        clear: both;
+        visibility: hidden;
+      }
+      .api-list-center{
+        width: 199px;
+        overflow: hidden;
+        li{
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+          line-height:30px;
+          position: relative;
+          .ivu-icon{
+            width: 24px;
+            height: 24px;
+            text-align: center;
+            line-height:24px;
+          }
+          .ivu-icon-arrow-expand, strong{
+            cursor: pointer;
+          }
+          .hover-visble{
+            position: absolute;
+            top: 0;
+            right: 0;
+            .ivu-icon{
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+    .api-content{
+      height: 100%;
+      flex-grow: 1;
+      .markdown-editor{
+        height: 100%;
+      }
+    }
+  }
+}
+.mdContainer {
+    width: 100%;
+    height: 100%;
+    background: lightblue;
+    &.fullPage {
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+    }
+    .navContainer {
+        width: 100%;
+        height: 36px;
+        background: #fff;
+        box-sizing: border-box;
+        border-bottom: 1px solid #eee;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0 10px;
+        .nameContainer {
+            color: lightblue;
+            margin-right: 10px;
+            cursor:pointer;
+        }
+        .markContainer {
+            width: auto;
+            height: 100%;
+            margin-left: 0px;
+            ul.markListGroup {
+                height: 100%;
+                width: auto;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                li.markListItem {
+                    list-style: none;
+                    width: 20px;
+                    height: 20px;
+                    margin: 0 2px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    cursor: pointer;
+                    font-size: 12px;
+                    color: #333;
+                    &:hover {
+                        background: #eee;
+                    }
+                }
+            }
+        }
+    }
+    .mdBodyContainer {
+        width: 100%;
+        height: calc(100% - 36px);
+        background: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-sizing: border-box;
+        &.noMenu{
+            height: 100%;
+        }
+    }
+}
+
+// 编辑区域
+.editContainer {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    border-right: 1px solid #ddd;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    .mdEditor {
+        height: 100%;
+        width: 100%;
+        background: transparent;
+        outline: none;
+        color: #fff;
+        resize: none;
+    }
+}
+
+// 预览区
+.previewContainer {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background: #fff;
+    overflow: auto;
+    padding: 10px;
 }
